# git-ast

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  standard.yml
content/: strings.json
docs/: overview.md  roadmap.md
docs/research/: README.md  ci-attestation.md  identity-index.md  node-identity.md  storage-model.md
examples/: demo.sh
proofs/: .gitignore  JsonMerge.lean  README.md  lake-manifest.json  lakefile.toml
src/: blame.rs  clones.rs  config.rs  diff.rs  drivers.rs  filters.rs  html.rs  identity.rs  json.rs  lib.rs  main.rs  merge.rs  pktline.rs  printer.rs  setup.rs
tests/: blame_e2e.rs  claims.rs  identity_cli.rs  merge.rs  merge_vectors.json
tests/features/: claims.feature
