[package]
name = "git-ast"
version = "0.1.0"
edition = "2021"
description = "Language-aware Git: AST-based diffs and merges instead of line-based (design-stage)."
license = "MIT"
repository = "https://github.com/bounded-systems/git-ast"

# Tree-sitter parses source into a concrete syntax tree; the `printer` module
# walks that tree and re-emits canonical source. No libgit2 needed: the
# clean/smudge filter speaks Git's pkt-line `filter-process` protocol over
# stdin/stdout, implemented in `pktline`.
[dependencies]
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
