[package]
name = "git-ast"
version = "0.1.0"
edition = "2021"
description = "Language-aware Git: AST-based diffs and merges instead of line-based (design-stage)."
license = "MIT"
repository = "https://github.com/bounded-systems/git-ast"

# Tree-sitter parses source into a concrete syntax tree; the `printer` module
# walks that tree and re-emits canonical source. No libgit2 needed: the
# clean/smudge filter speaks Git's pkt-line `filter-process` protocol over
# stdin/stdout, implemented in `pktline`. The `json` language uses serde_json:
# its `Map` is a `BTreeMap` (keys sorted) with deterministic scalar formatting —
# exactly the value-level normalization a canonical form needs.
[dependencies]
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-html = "0.23"
serde_json = "1"

# The Gherkin suite (tests/features/*.feature) executes the README's claims
# against real `git`, driving the built binary as the clean/smudge filter.
[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[[test]]
name = "claims"
harness = false
